crates/flowlog-build/tests/errors/typechecker/aggregation_type_mismatch.dl
.decl Person(name: string, city: string)
.decl Totals(name: string)
.input Person(IO="file", filename="Person.csv", delimiter=",")
.output Totals
Totals(sum(city)) :- Person(name, city).
